Fixing overflow on small mobiles

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,9 +12,11 @@
   /* margin: 0 auto; */
   /* padding: 2rem; */
   font-weight: normal;
-  min-height: 100%;
-  /* height: 100%; */
-  height: 100vh;
+  /* min-height: 100%; */
+  height: 100%;
+  /* height: 100vh; */
+  border: 1px solid red;
+
   display: flex;
   flex-direction: column;
 }
